[package]
name = "uwuave-banking-stage-ingress-types"
description = "uwuave banking stage ingress types"
documentation = "https://docs.rs/uwuave-banking-stage-ingress-types"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
solana-perf = { workspace = true }
